maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^WallFollowerMaze:4: warning: enclosing method mur has result type Unit: return value discarded
    return true
    ^WallFollowerMaze:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^WallFollowerMaze:7: warning: enclosing method mur has result type Unit: return value discarded
    return false
    ^WallFollowerMaze:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mur()){
           ^